# Learn-LangGraph

./: .gitignore  README.md  app.py  backend.py  frontend-resume-chat.py  frontend.py  pyproject.toml
01_Sequential_workflows/: 01_bmi_workflow.ipynb  02_simple_LLM_workflow.ipynb  03_prompting_chaining_workflow.ipynb  04_cricket_parallel_workflow.ipynb  05_upsc_essay_workflow_parallel.ipynb  blog.txt
02_parallel_workflows/: 02_upsc_essay_workflow_parallel.ipynb  essay.txt  essay2.txt
03_Conditional_workflows/: 01_quadratic_equation_workflow.ipynb  02_review_handling_workflow.ipynb
04_Looping_workflows/: 01_X_POST_generator.ipynb
05_ChatBots/: 01_basic_chatbot.ipynb  02_persitence.ipynb  03_tools_langgraph.ipynb
06_LangGraph_chatbot/: backend.py  frontend.py  langgraph_db_backend.py  langgraph_tool_backend.py  streamlit-db-frontend.py
Agents/: exercise-add-multi.ipynb  exercise-sequential.ipynb  hello-agent.ipynb
Agents_exercises/: Drafter.py  RAG_agent.py  ReActAgent.py  conditional_graph.ipynb  conditional_graph_exercise.ipynb  data_engineer_email.txt  history.txt  looping_graph.ipynb  memory_agent.py  multiple-input.ipynb  news_test.ipynb  sequential-graph.ipynb  simple_agent.py
